prevent param-table deadcells w fixed white background from overflowing fixed header

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -562,6 +562,7 @@ label[for=efficacyOrYearfig] {
 				border-top: 0 none;
 				position: relative;
 				top: -2px;
+				z-index: -9;
 			}
 
 			.param-row.regionalDefaultSelector .param-deadcell {
